deployments/workloads/homepage/deployment-analytics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics
  labels:
    app: analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
        - name: analytics
          image: docker.umami.is/umami-software/umami:postgresql-latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "500Mi"
              cpu: "1"
            requests:
              memory: "400Mi"
              cpu: "250m"
