deployments/workloads/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-deployment
  labels:
    app: homepage
    access: public
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: nilsherzig/homepage:latest
          # image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
