deployments/workloads/homepage/service-analytics.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics
spec:
  selector:
    app: analytics
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
