deployments/workloads/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  labels:
    access: public
spec:
  selector:
    app: homepage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
