deployments/workloads/homepage/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-gw-homepage
      hostname: "nilsherzig.com"
      protocol: HTTPS
      port: 9090
      tls:
        mode: Terminate
        certificateRefs:
          - name: nilsherzig-com-homepage
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-http-route
spec:
  parentRefs:
    - name: homepage-tls-gateway
  hostnames:
    - "nilsherzig.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage-homepage-service
          port: 80
