deployments/workloads/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-http-route
spec:
  parentRefs:
    - name: shared-gateway
      namespace: infra
  hostnames:
    - "nilsherzig.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage-homepage-service
          port: 80
