deployments/workloads/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-tls
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    access: public
spec:
  rules:
    - host: nilsherzig.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-service
                port:
                  number: 80
  tls:
    - hosts:
        - nilsherzig.com
      secretName: tls-homepage-cert
