deployments/workloads/homepage/cilium.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homepage
spec:
  endpointSelector:
    matchLabels:
      app: homepage
  ingress:
    - fromEntities:
        - cluster
    - fromCIDRSet:
        - cidr: 192.168.3.0/24
  ingressDeny:
    - fromEntities:
        - "world"
